# SpectralMethods

./: README.md  _config.yml  about.md  impressum.md  index.md  run_docker.sh
_homework/: ex02.md  ex03.md  ex04_mechanik.md  ex04_nichtlinear.md  ex04_zeitpropagation.md  homework01.md  homework02.md  homework03.md  index.md  solution_233.py  solution_242.py
_includes/: header_custom.html
_lecture/: approximation-and-interpolation.md  chapter01.md  chapter02.md  chapter03.md  chapter04.md  chapter05.md  chapter06.md  chapter07.md  chapter08.md  chapter09.md  chapter10.md  chapter11.md  chapter12.md  chapter13.md  chapter14.md  chapter15.md  differential-equations.md  discrete-fourier-transform.md  function-spaces.md  general_remarks.md  index.md  literature.md  models-and-modeling.md  navier-stokes.md  numerical-solution.md  spectral-methods.md  transport-theory.md
_literature/: index.md
_notes/: abbildungen.md  bwUniCluster.md  figures.md  formeln.md  index.md  python.md  running_mpi_programs.md  scaling.md
_notes/scaling/: CMakeLists.txt  plot_strong_scaling.py  plot_weak_scaling.py  timeit_strong.sh  timeit_weak.sh  wave_mpi.cpp
_project/: ex01.md  ex02.md  ex04_nichtlinear.md  general_remarks.md  index.md  milestone01.md  milestone02.md  milestone03.md  milestone04.md  milestone05.md  plot_basis_functions.py  solution_233.py  solution_255.py  tutorial01.md  tutorial02.md  tutorial03.md  tutorial04.md  your_final_report.md
_python/: index.md  pytutorial01.md  pytutorial02.md  pytutorial03.md  pytutorial04.md  pytutorial05.md  pytutorial06.md
(+20 files in other folders)
